--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,6 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:linux",
   "customizations": {
-    "codespaces": {
-      "repositories": {
-        "PE-Classroom/01-codepilot": {
-          "permissions": {
-            "contents": "read"
-          }
-        }
-      }
-    },
 
     "vscode": {
       "extensions": [
@@ -18,7 +9,13 @@
       ],
       "settings": {
         "livePreview.autoRefreshPreview": "On All Changes in Editor",
-        "editor.minimap.enabled": false
+        "editor.minimap.enabled": false,
+        "workbench.colorTheme": "Visual Studio Dark",
+        "editor.tabSize": 2,
+        "editor.insertSpaces": true,
+        "editor.detectIndentation": false,
+        "editor.wordWrap": "on",
+        "editor.stickyScroll.enabled": false
       }
     }
   }
